# boredle

./: .gitignore  README.md  index.md  pyproject.toml  wordlist.json
boredle/: boredle.py  helpers.py
tests/: test_helpers.py  test_wordle.py
wordle/: helpers.py
