[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Matt Burnside <burnside.matthew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyDictionary = "^2.0.1"
english-words = "^1.0.4"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
