[tool.poetry]
name = "boredle"
version = "0.1.0"
description = "A small set of functions to help solve (cheat at) the word guessing game Wordle."
authors = ["Matt Burnside <matt_codes@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
english-words = "^1.0.4"
secrets = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
